--- a/angular-src/src/index.html
+++ b/angular-src/src/index.html
@@ -18,6 +18,7 @@
       $('.cnpj').mask('00.000.000/0000-00');
       $('.money').mask('###.###.###.###.###,00', {reverse: true});
       $('.percent').mask('##0,00 %', {reverse: true});
+      $('.number').mask('###.###.###.###.###,999999', {reverse: true});
     });
   </script>
   <link  rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.min.css">
